Changed as requested

--- a/Kapitel/02_App/07_Settings/Klassen/SettingsScreen/main.tex
+++ b/Kapitel/02_App/07_Settings/Klassen/SettingsScreen/main.tex
@@ -16,11 +16,11 @@ Der SettingsScreen zeigt folgende Einstellungs-Möglichkeiten untereinander an:
     Es wird über einen \href{https://developer.android.com/guide/topics/ui/notifiers/toasts}{Toast} angezeigt, dass 
     die UserId in die Zwischenablage kopiert wurde.
     \item Sprach-Schaltfläche: Klickt der Benutzer auf diese Schaltfläche, bekommt er in einem Untermenü alle verfügbaren Sprachen angezeigt. 
-    Wählt er davon eine aus, zeigt die App wieder die Gesamtansicht der Einstellungen an. Die App wird in der ausgewählten Sprache angezeigt.\\
+    Wählt er davon eine aus, wird die App in der ausgewählten Sprache angezeigt. Die App bleibt im Untermenü.\\
     Im Untermenü befindet sich oben links ein Zurück-Button. Wird dieser gedrückt oder die Zurückfunktion des Endgeräts betätigt, 
     wird ebenfalls wieder die Gesamtansicht angezeigt.
     \item Theme-Schaltfläche: Klickt der Benutzer auf diese Schaltfläche, bekommt er in einem Untermenü alle verfügbaren Themes angezeigt. 
-    Wählt er davon eines aus, zeigt die App wieder die Gesamtansicht der Einstellungen an. Die App wird im gewählten Theme angezeigt.\\
+    Wählt er davon eines aus, wird die App im gewählten Theme angezeigt. Die App bleibt im Untermenü.\\
     Im Untermenü befindet sich oben links ein Zurück-Button. Wird dieser gedrückt oder die Zurückfunktion des Endgeräts betätigt, 
     wird ebenfalls wieder die Gesamtansicht angezeigt.
     \item Suchverlauf speichern: In dieser Schaltfläche befindet sich ein Schalter. 
