--- a/Kapitel/00_Backend/Models/AliasSuggestion/getVoters_ListString/main.tex
+++ b/Kapitel/00_Backend/Models/AliasSuggestion/getVoters_ListString/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{getVotedUsers() : List<user : String>}}%$$$M
+\paragraph{\texttt{getVoters() : List<user : String>}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt eine Liste der Benutzer zurück, die den Alias-Vorschlag bewertet haben.
 \paragraph*{Beschreibung}
