Add javadoc for constructor in 'Models/Alias'

--- a/Kapitel/00_Backend/Models/Alias/main.tex
+++ b/Kapitel/00_Backend/Models/Alias/main.tex
@@ -1,6 +1,7 @@
 \subsection{Alias}
 
 \inprelmod{Beschreibung}
+\inprelmod{constructor}
 \inprelmod{getName_String}
 \inprelmod{getID_long}
 \inprelmod{getAuthorities_CollectionExtGrantedAuthority}
