Remove return type in constructor of 'Models/AliasSuggestion'

--- a/Kapitel/00_Backend/Models/AliasSuggestion/constructor/main.tex
+++ b/Kapitel/00_Backend/Models/AliasSuggestion/constructor/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{<<create>> AliasSuggestion(name : String, id : long, suggester : String) : void}}%$$$M
+\paragraph{\texttt{<<create>> AliasSuggestion(name : String, id : long, suggester : String)}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Der Konstruktor.
 \paragraph*{Beschreibung}
