Enhance javadoc of method 'deleteByName_String_boolean'
Enhance javadoc of method
'Kapitel/00_Backend/Repositories/BlacklistRepository/
deleteByName_String_boolean' in '/main.tex'
(in the same above mentioned path) as requested.

--- a/Kapitel/00_Backend/Repositories/BlacklistRepository/deleteByName_String_boolean/main.tex
+++ b/Kapitel/00_Backend/Repositories/BlacklistRepository/deleteByName_String_boolean/main.tex
@@ -13,4 +13,4 @@ Hierfür wird die Zeichenkette übergeben.
     		Die von der Blacklist zu entfernende Zeichenkette.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Wahr, wenn die übergebene Zeichenkette aus der Blacklist entfernt werden konnte oder wenn die Zeichenkette bereits nicht in der Blacklist hinterlegt war, ansonsten falsch.
+Wahr, wenn die übergebene Zeichenkette aus der Blacklist entfernt werden konnte oder wenn die Zeichenkette nicht in der Blacklist hinterlegt war, ansonsten falsch.
