--- a/Kapitel/00_Backend/Repositories/DeletedAliasRepository/findNewerThanVersion_int_ListStringInt,int/main.tex
+++ b/Kapitel/00_Backend/Repositories/DeletedAliasRepository/findNewerThanVersion_int_ListStringInt,int/main.tex
@@ -10,7 +10,7 @@ Dabei wird die gewünschte Version übergeben und auch die neue Version zurückg
 \begin{itemize}
     \item version : int
     		\paragraph*{Beschreibung}
-    		Die Version, für die die entfernten Aliasse aktualisiert werden sollen.
+    		Die Version, ab der entfernte Aliasse zur Liste hinzugefügt werden sollen.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Die Liste der entfernten Aliasse, die eine neuere als die übergebene Version haben, und die neue Version.
