Fix typo in method 'findNewerThanVersion_int_ListStringInt,int'
Fix typo in method
'Kapitel/00_Backend/Repositories/DeletedAliasRepository/
findNewerThanVersion_int_ListStringInt,int'
in '/main.tex' (in the same above mentioned path).

--- a/Kapitel/00_Backend/Repositories/DeletedAliasRepository/findNewerThanVersion_int_ListStringInt,int/main.tex
+++ b/Kapitel/00_Backend/Repositories/DeletedAliasRepository/findNewerThanVersion_int_ListStringInt,int/main.tex
@@ -4,7 +4,7 @@ Gibt eine Liste aller entfernten Aliasse, die eine neuere als eine bestimmte Ver
 \paragraph*{Beschreibung}
 Die Methode ist serverintern und wird somit nicht explizit vom Administrator aufgerufen.
 Stattdessen wird die Methode von Methoden aus dem Paket \texttt{Services} aufgerufen.
-Die Methode ermöglicht, dass eine Liste aller entfernten Alias, die eine neuere als eine bestimmte Version haben, angefragt und zurückgegeben werden kann.
+Die Methode ermöglicht, dass eine Liste aller entfernten Aliasse, die eine neuere als eine bestimmte Version haben, angefragt und zurückgegeben werden kann.
 Dabei wird die gewünschte Version übergeben und auch die neue Version zurückgegeben.
 \paragraph*{Parameter}
 \begin{itemize}
