--- a/Kapitel/00_Backend/Models/MapID/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Models/MapID/Beschreibung/main.tex
@@ -5,7 +5,7 @@
 \begin{itemize}
     \item id : int
     	    \paragraph*{Beschreibung}
-            Eindeutige ID, die ein Kartenobjekt repräsentiert. Diese ist mit derselben in der Frontend-Anwendung konsitent,
+            Eindeutige ID, die ein Kartenobjekt repräsentiert. Diese ist mit derselben in der Frontend-Anwendung konsistent,
             sodass Frontend und Backend mittels dieser in ihrer Kommunikation einander bestimmte Kartenobjekte zweifelsfrei 
             identifizieren können. 
     \item name : String
