--- a/Kapitel/00_Backend/Security/JWTFilter/doFilterInternal()/main.tex
+++ b/Kapitel/00_Backend/Security/JWTFilter/doFilterInternal()/main.tex
@@ -20,7 +20,7 @@ Security-Context geladen und diesem mittels der \dq setAuthentication() \dq Meth
             Genutzt um den HttpRequest nach Beenden des Filters weiterzuleiten.
     \item FilterChain
     		\paragraph*{Beschreibung}
-            Klasse, die dafür sorgt, dass alle vorangeschaaltenen Filter in einer festen Reihenfolge ausgeführt werden. Da es in diesem Entwurf nur einen Filter gibt,
+            Klasse, die dafür sorgt, dass alle vorangeschaltenen Filter in einer festen Reihenfolge ausgeführt werden. Da es in diesem Entwurf nur einen Filter gibt,
             sorgt dieser dementsprechend nur für die Ausführung des einen Filters und der Request wird nach dessen Ausführung direkt (an die GraphQL-Schnittstelle) weitergeleitet.
 
 \end{itemize}
