--- a/Kapitel/00_Backend/Security/WebSecurityConfig/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Security/WebSecurityConfig/Beschreibung/main.tex
@@ -1,6 +1,6 @@
 \subsection{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
-Konfigurationsklasse, die die Standdartberechtigungen für die Methoden in Resolverebene festlegt und für die Voranschaltung des Filters sorgt.
+Konfigurationsklasse, die die Standardberechtigungen für die Methoden in Resolverebene festlegt und für die Voranschaltung des Filters sorgt.
 \paragraph*{Beschreibung}
 Die Klasse erbt von \dq WebSecurityConfigurerAdapter \dq und überscheibt die \dq configure \dq Methode, sodass 
 alle Methoden auf Resolverebene standardmäßig ohne jegliche Berechtigungen zugänglich sind und der JWTFilter vorangeschaltet wird.
