Changed as requested

--- a/Kapitel/02_App/07_Settings/Klassen/SettingsScreen/main.tex
+++ b/Kapitel/02_App/07_Settings/Klassen/SettingsScreen/main.tex
@@ -18,11 +18,11 @@ Der SettingsScreen zeigt folgende Einstellungs-Möglichkeiten untereinander an:
     \item Sprach-Schaltfläche: Klickt der Benutzer auf diese Schaltfläche, bekommt er in einem Untermenü alle verfügbaren Sprachen angezeigt. 
     Wählt er davon eine aus, wird die App in der ausgewählten Sprache angezeigt. Die App bleibt im Untermenü.\\
     Im Untermenü befindet sich oben links ein Zurück-Button. Wird dieser gedrückt oder die Zurückfunktion des Endgeräts betätigt, 
-    wird ebenfalls wieder die Gesamtansicht angezeigt.
+    wird wieder die Gesamtansicht angezeigt.
     \item Theme-Schaltfläche: Klickt der Benutzer auf diese Schaltfläche, bekommt er in einem Untermenü alle verfügbaren Themes angezeigt. 
     Wählt er davon eines aus, wird die App im gewählten Theme angezeigt. Die App bleibt im Untermenü.\\
     Im Untermenü befindet sich oben links ein Zurück-Button. Wird dieser gedrückt oder die Zurückfunktion des Endgeräts betätigt, 
-    wird ebenfalls wieder die Gesamtansicht angezeigt.
+    wird wieder die Gesamtansicht angezeigt.
     \item Suchverlauf speichern: In dieser Schaltfläche befindet sich ein Schalter. 
     Am Zustand des Schalters lässt sich erkennen, ob die Speicherung des Suchverlaufs an- oder ausgeschaltet ist. 
     Durch Klicken auf den Schalter lässt sich dies wechseln.
