Fixed broken structure of document viewer

--- a/Kapitel/02_App/08_DocumentViewer/main.tex
+++ b/Kapitel/02_App/08_DocumentViewer/main.tex
@@ -8,5 +8,6 @@ Da die entsprechenden Textdokumente direkt aus den Ressourcen geladen werden, we
 keine Klassen im Model benötigt. Je nach Implementierung kann es, durch die Auslagerung des 
 Zustands des DocumentScreens, nötig sein, eine ViewModel-Klasse zu erstellen. Dies bleibt der Implementierung vorbehalten.
 
-\inprelmod{DocumentScreen}
-\inprelmod{DocumentType}
+\inprelmod{Paketdiagramm}
+\inprelmod{Klassendiagramm}
+\inprelmod{Klassen}
