--- a/Kapitel/02_App/05_Search/Klassen/SearchScreen/main.tex
+++ b/Kapitel/02_App/05_Search/Klassen/SearchScreen/main.tex
@@ -1,35 +1,33 @@
-\subsection{SearchScreen}
+\subsubsection{SearchScreen}
+\paragraph*{Typ}
+Composable.
 \paragraph*{Beschreibung}
 Diese Klasse ermöglicht die Eingabe eines Suchbegriffs in ein Textfeld durch den Benutzer, 
 die Anzeige einer Liste von Suchvorschlägen und die Auswahl eines Vorschlages durch den Benutzer, 
 indem er einen Vorschlag auswählt oder die Eingabe vollständig selbst vornimmt.
 
-\subsection{Beschreibung der Benutzeroberfläche}
+\subsubsection*{Beschreibung der Benutzeroberfläche}
 Die Suchleiste wird am oberen Bildschirmrand angezeigt mit der Liste an Suchvorschlägen darunter aufgelistet.
 Links neben der Suchleiste am oberen Bildschirmrand ist ein \dq Zurück-Knopf \dq{}.
 Eine Tastatur ist geöffnet.
 
-\subsection{+ onClickBack}%$$$M
+\subsubsection*{\texttt{+ onClickBack}}%$$$M
 \paragraph*{Beschreibung}
 Veranlasst bei Betätigung des \dq Zurück-Knopfs \dq{} das Schließen der Suchleiste inklusive Suchvorschlägen und Tastatur und somit die Rückkehr zur Kartenansicht.
 \paragraph*{Parameter}
-\begin{itemize}
-    \item keine
-\end{itemize}
+Keine.
 \paragraph*{Rückgabewert}
-void
+Void.
 
-\subsection{+ onClickReturn}%$$$M
+\subsubsection*{\texttt{+ onClickReturn}}%$$$M
 \paragraph*{Beschreibung}
 Veranlasst bei Betätigung der Zurückgehen-Funktion des Endgeräts das Schließen der Suchleiste inklusive Suchvorschlägen und Tastatur und somit die Rückkehr zur Kartenansicht.
 \paragraph*{Parameter}
-\begin{itemize}
-    \item keine
-\end{itemize}
+Keine.
 \paragraph*{Rückgabewert}
-void
+Void.
 
-\subsection{+ onClickSearchSuggestion}%$$$M
+\subsubsection*{\texttt{+ onClickSearchSuggestion}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Veranlasst das Anzeigen des Kartenobjekts zu dem ausgewählten Suchvorschlag.
 \paragraph*{Beschreibung}
@@ -37,12 +35,12 @@ Veranlasst das Schließen der Suchleiste inklusive Suchvorschlägen und Tastatur
 Und veranlasst das Anzeigen des Kartenobjekts zu dem ausgewählten Suchvorschlag auf der Karte.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item searchKey : String = Die Zeichenkette, die der Benutzer eingetippt hat
+    \item searchKey : String = Die Zeichenkette, die der Benutzer eingetippt hat.
 \end{itemize}
 \paragraph*{Rückgabewert}
-void
+Void.
 
-\subsection{+ onClickEnter}%$$$M
+\subsubsection*{\texttt{+ onClickEnter}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Veranlasst das Anzeigen des Kartenobjekts zu dem obersten angezeigten Suchvorschlag.
 \paragraph*{Beschreibung}
@@ -50,23 +48,23 @@ Veranlasst das Schließen der Suchleiste inklusive Suchvorschlägen und Tastatur
 Und veranlasst das Anzeigen des Kartenobjekts zu dem obersten angezeigten Suchvorschlag auf der Karte.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item searchKey : String = Die Zeichenkette, die der Benutzer eingetippt hat
+    \item searchKey : String = Die Zeichenkette, die der Benutzer eingetippt hat.
 \end{itemize}
 \paragraph*{Rückgabewert}
-void
+Void.
 
-\subsection{+ onClickKeyboard}%$$$M
+\subsubsection*{\texttt{+ onClickKeyboard}}%$$$M
 \paragraph*{Beschreibung}
 Veranlasst das Aktualisieren der angezeigten Suchvorschläge entsprechend der aktuell eingegebenen Zeichenkette.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item searchInput : String = Die Zeichenkette, die der Benutzer eingetippt hat
+    \item searchInput : String = Die Zeichenkette, die der Benutzer eingetippt hat.
 \end{itemize}
 \paragraph*{Rückgabewert}
-void
+Void.
 
 
-\subsection{Bibliothek SearchView}
+\subsubsection*{Bibliothek SearchView}
 \paragraph*{Beschreibung}
 Ein bereits existierendes Widget, das dem Benutzer eine Benutzeroberfläche bietet, um eine Suchanfrage einzugeben und eine Anfrage an einen Suchanbieter zu senden. 
 Zeigt eine Liste von Suchvorschlägen oder -ergebnissen an, falls verfügbar 
