--- a/Kapitel/02_App/05_Search/Klassen/SearchScreen/main.tex
+++ b/Kapitel/02_App/05_Search/Klassen/SearchScreen/main.tex
@@ -35,7 +35,7 @@ Veranlasst das Schließen der Suchleiste inklusive Suchvorschlägen und Tastatur
 Und veranlasst das Anzeigen des Kartenobjekts zu dem ausgewählten Suchvorschlag auf der Karte.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item searchKey : String = Die Zeichenkette, die der Benutzer eingetippt hat.
+    \item searchKey : String Die Zeichenkette, die der Benutzer eingetippt hat.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Void.
@@ -48,7 +48,7 @@ Veranlasst das Schließen der Suchleiste inklusive Suchvorschlägen und Tastatur
 Und veranlasst das Anzeigen des Kartenobjekts zu dem obersten angezeigten Suchvorschlag auf der Karte.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item searchKey : String = Die Zeichenkette, die der Benutzer eingetippt hat.
+    \item searchKey : String Die Zeichenkette, die der Benutzer eingetippt hat.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Void.
@@ -58,7 +58,7 @@ Void.
 Veranlasst das Aktualisieren der angezeigten Suchvorschläge entsprechend der aktuell eingegebenen Zeichenkette.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item searchInput : String = Die Zeichenkette, die der Benutzer eingetippt hat.
+    \item searchInput : String Die Zeichenkette, die der Benutzer eingetippt hat.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Void.
