Changed as requested

--- a/Kapitel/02_App/04_AddAlias/Klassen/AddAliasScreen/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/AddAliasScreen/main.tex
@@ -2,11 +2,11 @@
 \paragraph*{Typ}
 Composable.
 \paragraph*{Beschreibung}
-Dieses Composable stellt eine grafische Benutzerschnittstelle bereit
+Dieses Composable stellt eine grafische Benutzerschnittstelle bereit.
 Mit dieser kann der Benutzer einen neuen Alias lokal hinzufügen oder global vorschlagen.\\
 Beim Erstellen eines AddAliasScreens durch die Navigation erhält dieser die MapId 
 des ausgewählten Kartenobjekts, zu dem ein Alias erstellt werden soll (siehe Navigation).\\
-Für die Speicherung der neuen Aliasse bez. Alias-Vorschläge und den erhalt der Aliasse benutzt 
+Für die Speicherung der neuen Aliasse bez. Alias-Vorschläge und den Erhalt der Aliasse benutzt 
 der AddAliasScreen einen IAddAliasController.
 
 \paragraph*{Aufbau}
