--- a/Kapitel/02_App/04_AddAlias/Klassen/IAddAliasController/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/IAddAliasController/main.tex
@@ -32,7 +32,7 @@ boolean, ob das Einreichen erfolgreich war.
 
 \subsubsection*{\texttt{+ getMapObjectData(mapId : int) : (String, String))}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Gibt die Nummern für das Gebäude und ggf. die Raumnummer zurück.
+Gibt die Nummer für das Gebäude und ggf. die Raumnummer zurück.
 \paragraph*{Beschreibung}
 Handelt es sich beim, durch die MapId übergebenen, Kartenobjekt um ein Gebäude, 
 so ist der erste Ausgabeparamer die Gebäudenummer und der zweite \texttt{null}.\\
