Fix typo and remove unnecessary void return type
Fix typo and remove unnecessary void return type
in 'Models/AliasSuggestion/addNegVote',
'Models/AliasSuggestion/addPosVote'.

--- a/Kapitel/00_Backend/Models/AliasSuggestion/addNegVote/main.tex
+++ b/Kapitel/00_Backend/Models/AliasSuggestion/addNegVote/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{addPosVote() : void}}%$$$M
+\paragraph{\texttt{addNegVote()}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Fügt eine negative Bewertung hinzu.
 \paragraph*{Beschreibung}
