--- a/Kapitel/00_Backend/Models/AliasSuggestion/addPosVote/main.tex
+++ b/Kapitel/00_Backend/Models/AliasSuggestion/addPosVote/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{addPosVote() : void}}%$$$M
+\paragraph{\texttt{addPosVote()}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Fügt eine positive Bewertung hinzu.
 \paragraph*{Beschreibung}
