--- a/Kapitel/00_Backend/Models/AliasSuggestion/main.tex
+++ b/Kapitel/00_Backend/Models/AliasSuggestion/main.tex
@@ -1,3 +1,14 @@
 \subsection{AliasSuggestion}
 
 \inprelmod{Beschreibung}
+\inprelmod{addNegVote}
+\inprelmod{addPosVote}
+\inprelmod{addVoter_String_boolean}
+\inprelmod{constructor}
+\inprelmod{getID_long}
+\inprelmod{getMapID_int}
+\inprelmod{getName_String}
+\inprelmod{getNegVotes_int}
+\inprelmod{getPosVotes_int}
+\inprelmod{getSuggester_User}
+\inprelmod{getVoters_ListString}
