--- a/Kapitel/00_Backend/Models/AliasSuggestion/addVoter_String_boolean/main.tex
+++ b/Kapitel/00_Backend/Models/AliasSuggestion/addVoter_String_boolean/main.tex
@@ -8,7 +8,7 @@ Die Methode ermöglicht, dass ein Benutzer, der den Alias-Vorschlag bewertet hat
 \begin{itemize}
     \item user : String
     		\paragraph*{Beschreibung}
-    		Der vom Access-Token abgeleitete Benutzeridentifikator.
+    		Der im Http-Request übergebene Benutzeridentifikator.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Wahr, wenn der Benutzer zur Liste der Bewerter erfolgreich hinzugefügt werden konnte, ansonsten falsch.
