--- a/Kapitel/00_Backend/Models/AliasSuggestion/constructor/main.tex
+++ b/Kapitel/00_Backend/Models/AliasSuggestion/constructor/main.tex
@@ -1,5 +1,5 @@
-\paragraph{\texttt{<<create>> AliasSuggestion(name : String, id : long, suggester : String)}}%$$$M
+\paragraph{\texttt{<<create>> AliasSuggestion(name : String, suggester : String)}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Der Konstruktor.
 \paragraph*{Beschreibung}
-Ermöglicht das Erstellen einer Instanz, wobei die Angabe des Namens, der ID, und des Benutzers, der den Alias vorgeschlagen hat, erforderlich ist.
+Ermöglicht das Erstellen einer Instanz, wobei die Angabe des Namens und des Benutzers, der den Alias vorgeschlagen hat, erforderlich ist.
