--- a/Kapitel/00_Backend/Models/AliasSuggestion/main.tex
+++ b/Kapitel/00_Backend/Models/AliasSuggestion/main.tex
@@ -5,10 +5,9 @@
 \inprelmod{addPosVote}
 \inprelmod{addVoter_String_boolean}
 \inprelmod{constructor}
-\inprelmod{getID_long}
 \inprelmod{getMapID_int}
 \inprelmod{getName_String}
 \inprelmod{getNegVotes_int}
 \inprelmod{getPosVotes_int}
 \inprelmod{getSuggester_User}
-\inprelmod{getVoters_ListString}
+\inprelmod{getVoters_IterableString}
