--- a/Kapitel/00_Backend/Models/MapID/getID_int/main.tex
+++ b/Kapitel/00_Backend/Models/MapID/getID_int/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{getID() : long}}%$$$M
+\paragraph{\texttt{getID() : int}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt die ID zurück.
 \paragraph*{Beschreibung}
