--- a/Kapitel/00_Backend/Models/User/main.tex
+++ b/Kapitel/00_Backend/Models/User/main.tex
@@ -1,3 +1,6 @@
 \subsection{User}
 
 \inprelmod{Beschreibung}
+\inprelmod{constructor}
+\inprelmod{getName_String}
+\inprelmod{getAuthorities_CollectionExtGrantedAuthority}
