--- a/Kapitel/02_App/main.tex
+++ b/Kapitel/02_App/main.tex
@@ -2,6 +2,7 @@
 
 \inprelmod{01_Architektur}
 \inprelmod{02_Paketdiagramm}
+\inprelmod{02_t_Navigation}
 \inprelmod{03_Map}
 \inprelmod{04_AddAlias}
 \inprelmod{05_Search}
