--- a/Kapitel/04_Admin_Panel/04_Klassen/02_Change/01_perform/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/02_Change/01_perform/main.tex
@@ -5,4 +5,4 @@ Dies ist eine Interface-Methode, die implementiert werden muss.
 \paragraph*{Parameter}
 Keine
 \paragraph*{Rückgabewert}
-Wahr, wenn erfolgreich durchgeführt, Falsch sonst
+Wahr, wenn erfolgreich durchgeführt, falsch sonst
