--- a/Kapitel/04_Admin_Panel/04_Klassen/03_ChangeAction/04_perform/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/03_ChangeAction/04_perform/main.tex
@@ -4,4 +4,4 @@ Ruft \verb#Change::perform# dieser Änderung auf.
 \paragraph*{Parameter}
 Keine
 \paragraph*{Rückgabewert}
-Wahr, wenn erfolgreich durchgeführt, Falsch sonst
+Wahr, wenn erfolgreich durchgeführt, falsch sonst
