--- a/Kapitel/04_Admin_Panel/04_Klassen/04_Changes/01_addChange/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/04_Changes/01_addChange/main.tex
@@ -9,4 +9,4 @@ Dabei wird eine Instanz von \verb#ChangeAction# erzeugt und der aktuelle Zeitpun
     \item category: String = Die Kategorie der Änderung
 \end{itemize}
 \paragraph*{Rückgabewert}
-Wahr, wenn erfolgreich, Falsch sonst
+Wahr, wenn erfolgreich, falsch sonst
