--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/04_Changes/02_performChange/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/04_Changes/02_performChange/main.tex
@@ -8,4 +8,4 @@ Dabei wird die entsprechende Änderung entfernt.
     \item category: String = Kategorie der entsprechenden Änderung.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Wahr, wenn erfolgreich, Falsch sonst
+Wahr, wenn erfolgreich, falsch sonst
