--- a/Kapitel/04_Admin_Panel/04_Klassen/01_AuthManager/01_login/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/01_AuthManager/01_login/main.tex
@@ -6,8 +6,8 @@ Ermöglicht einem Benutzer sich anzumelden.
 Hierfür wird ein OpenIDConnect-Provider (OIDC-Provider) verwendet, der zuvor durch die Methode \verb#AuthManager::configure# konfiguriert wird.
 Dazu wird der Benutzer auf die Login-Seite des OIDC-Providers geleitet und anschließend wieder zurück.
 Der erhaltene Access-Token wird anschließend gespeichert.
-Bei Erfolg wird wahr zurückgegeben, andernfalls wird Falsch zurückgegeben.
+Bei Erfolg wird wahr zurückgegeben, andernfalls wird falsch zurückgegeben.
 \paragraph*{Parameter}
 Keine
 \paragraph*{Rückgabewert}
-Wahr, wenn erfolgreich, Falsch sonst
+Wahr, wenn erfolgreich, falsch sonst
