--- a/Kapitel/04_Admin_Panel/04_Klassen/04_Changes/02_removeChange/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/04_Changes/02_removeChange/main.tex
@@ -6,4 +6,4 @@ Entferne eine Änderung.
     \item action : ChangeAction = Instanz der Klasse \verb#ChangeAction#, die die zu entfernende Änderungsaktion repräsentiert.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Wahr, wenn erfolgreich, Falsch sonst
+Wahr, wenn erfolgreich, falsch sonst
