Changed as requested

--- a/Kapitel/02_App/10_DataStorage/Daten/SharedPreferences/main.tex
+++ b/Kapitel/02_App/10_DataStorage/Daten/SharedPreferences/main.tex
@@ -24,7 +24,7 @@ Folgende Daten werden über Shared Preferences gespeichert:
         \item isSignedIn : boolean Wert, ob sich der Benutzer angemeldet und noch nicht wieder abgemeldet hat.
         \item plattform : String Anmeldedienst, mit der sich der Benutzer angemeldet hat.
         \item accessToken : String AccessToken.
-        \item id : JWT Vom Anmeldedienst übermittelte ID.
+        \item idToken : JWT Vom Anmeldedienst übermitteltes ID-Token.
         \item refreshToken : String Refresh-Token.
         \item userId : String Vom Server vergebene UserId.
     \end{itemize}
