started Enhancement of Repositories

--- a/Kapitel/00_Backend/Repositories/AliasRepository/findByMapID_int_ListAlias/main.tex
+++ b/Kapitel/00_Backend/Repositories/AliasRepository/findByMapID_int_ListAlias/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{findByMapID(mapID : int) : List<alias : String> aliases}}%$$$M
+\paragraph{\texttt{findByMapID(mapID : int) : Iterable<alias : String>}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt eine Liste der Aliasse, die als Bezeichner für ein bestimmtes Kartenobjekt dienen, zurück.
 \paragraph*{Beschreibung}
