Changed as requested

--- a/Kapitel/02_App/02_t_Navigation/01_Screens/main.tex
+++ b/Kapitel/02_App/02_t_Navigation/01_Screens/main.tex
@@ -4,7 +4,7 @@ Die App besitzt die folgenden Ansichten:
     \item \texttt{Kartenansicht}: Diese Ansicht ist die Hauptansicht der App. Die App zeigt nach dem Starten diese Ansicht an. 
     Diese Ansicht zeigt eine Karte und lässt Interaktionen damit zu.
     Sie wird von der Klasse \texttt{MapScreen} bereitgestellt.
-    \item \texttt{Alias-Hinzufügen-Ansicht}: Diese Ansicht lässt den Benutzer einen Alias hinzufügen oder Vorschlagen.
+    \item \texttt{Alias-Hinzufügen-Ansicht}: Diese Ansicht lässt den Benutzer einen Alias hinzufügen oder vorschlagen.
     Sie wird von der Klasse \texttt{AddAliasScreen} bereitgestellt.
     \item \texttt{Suche}: Diese Ansicht erlaubt es dem Benutzer nach einem Kartenobjekt zu suchen.
     Sie wird von der Klasse \texttt{SearchScreen} bereitgestellt.
