--- a/Kapitel/02_App/02_t_Navigation/02_Wechsel/main.tex
+++ b/Kapitel/02_App/02_t_Navigation/02_Wechsel/main.tex
@@ -8,7 +8,7 @@ Der Wechsel in eine bestimmte Ansicht kann durch folgende Ziele durchgeführt we
 \begin{itemize}
     \item \texttt{Kartenansicht}: 
     \begin{itemize}
-        \item \texttt{map}: Wechsel in die \texttt{Kartenansicht}, ohne eine bestimmtes Kartenobjekt zu fokussieren.
+        \item \texttt{map}: Wechsel in die \texttt{Kartenansicht}, ohne ein bestimmtes Kartenobjekt zu fokussieren.
         \item \texttt{map/\{mapId\}}: Wechsel in die \texttt{Kartenansicht}, das durch seine MapId gegebene Kartenobjekt wird fokussiert.
         \item \texttt{map/\{mapId\}/\{number\}}: Wechsel in die \texttt{Kartenansicht}, das durch seine MapId gegebene Gebäude wird fokussiert. 
         Über den durch seine Raumnummer gegebene, in der App nicht existierende Raum wird eine Vermutung zum Stockwerk angezeigt.
