further enhancements for repositories

--- a/Kapitel/00_Backend/Repositories/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Repositories/Beschreibung/main.tex
@@ -1,12 +1,11 @@
 \subsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
 Wie erwähnt empfehlen wir die Datenhaltung mittels SQL Datenbanken, und den Zugriff auf diese mittels eines Repsitories,
-dass von der Libraryklasse \dq JpaRepository \dq erbt. Hierfür wird eine seperate Klasse mit den jeweiligen Konfigurationen benötigt,
-die dafür sorgt, dass die richtigen Einträge der richtigen Datenbank und dem passenden Repsoitory zugeordnet werden können (siehe Paket \dq Configurations \dq).
+dass von der Libraryklasse \dq JpaRepository \dq erbt.
 
 \paragraph*{Enthaltene Klassen}
 \begin{itemize}
-    \item AliasRepsoitory
+    \item AliasRepository
     \item AliasSuggestionRepository
     \item BlacklistRepository
     \item MapIDRepository
