--- a/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/Beschreibung/main.tex
@@ -11,4 +11,5 @@ seines Namens und der zugehörigen MapID sowie das Löschen und Speichern von Al
     \item \texttt{findByVotes(minVotesNeg : int, minVotesPos : int) : Iterable<AliasSuggestion>}
     \item \texttt{findAmountByMapID(mapID : int, amount : int) : Iterable<aliasSuggestion : String>}
     \item \texttt{updateVotes(aliasSuggestion : String, mapID : int, vote : Boolean) : Boolean}
+    \item \texttt{addVoter(user : String, aliasSuggestion : String, mapID : int)}
 \end{itemize}
