--- a/Kapitel/00_Backend/Repositories/MapIDRepository/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Repositories/MapIDRepository/Beschreibung/main.tex
@@ -5,5 +5,6 @@ Dafür müssen Einträge hinzugefügt und sowohl alle vorhandenen als auch spezi
 abgefragt werden können.
 \paragraph*{Enthaltene Methoden}
 \begin{itemize}
-    \item findByName(name : String) : int
+    \item \texttt{findByName(mapObject : String) : int}
+    \item \texttt{findByID(mapID : int) : String}
 \end{itemize}
