--- a/Kapitel/00_Backend/Repositories/AliasRepository/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Repositories/AliasRepository/Beschreibung/main.tex
@@ -7,5 +7,5 @@ das Abspeichern neuer Aliasse.
 \begin{itemize}
     \item \texttt{findByMapID(mapID : int) : Iterable<alias : String>}
     \item \texttt{deleteByName(alias : String) : Boolean}
-    \item \textt{findByName(alias : String)}
+    \item \texttt{findByName(alias : String)}
 \end{itemize}
