--- a/Kapitel/02_App/04_AddAlias/Klassen/AddAliasScreen/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/AddAliasScreen/main.tex
@@ -11,7 +11,7 @@ der AddAliasScreen einen IAddAliasController.
 
 \paragraph*{Aufbau}
 \begin{itemize}
-    \item In der Kopfzeile befindet ein Zurück-Button. Wird auf diesen geklickt, oder die Zurück-Funktion des Endgeräts benutzt, 
+    \item In der Kopfzeile befindet sich ein Zurück-Button. Wird auf diesen geklickt, oder die Zurück-Funktion des Endgeräts benutzt, 
     kehrt die App zur vorherigen Ansicht zurück. Eingetippte Aliasse, die noch nicht gespeichert oder vorgeschlagen wurden verfallen.
     \item Es wird die Gebäudenummer des ausgewählten Gebäudes, bez. die des Gebäudes, in dem sich der Raum befindet angezeigt.
     \item Ist das ausgewählte Kartenobjekt ein Raum, wird unter der Gebäudenummer ebenfalls die Raumnummer angezeigt.
