--- a/Kapitel/00_Backend/Services/AliasService/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Services/AliasService/Beschreibung/main.tex
@@ -1,6 +1,6 @@
 \subsubsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
-Zugriff auf zugrundeliegende Datenhaltung der bestehenden Aliasse.
+Interface zum Zugriff auf zugrundeliegende Datenhaltung der bestehenden Aliasse.
 \paragraph*{Enthaltene Methoden}
 \begin{itemize}
     \item \texttt{addAlias(alias : String, mapID : int) : boolean}
